updated at 8:27PM

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 </head>
 <body>
 
+  <!-- start of header -->
+
   <header class="header-container">
 
     <section class="banner-section">
@@ -30,7 +32,7 @@
           <h1>Conmebol</h1>
           <h1>Copa America</h1>
           <h1>2021</h1>
-          <button class="header-btn">watch live <i class="fas fa-arrow-right"></i></button>
+          <button class="header-btn"> <a href="https://www.sonyliv.com/" target="_blank">watch live <i class="fas fa-arrow-right"></i></a> </button>
           </div>       
 
         </div>
@@ -47,6 +49,9 @@
 
   </header>
 
+  <!-- end of header part -->
+
+  <!-- start of main section of body as it will contain player details -->
 
   <main class="main-section">
 
@@ -60,7 +65,7 @@
           </div>
           <div class="player-details">
             <h3>neymar jr</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti architecto commodi consectetur laboriosam hic? Eum maiores odit impedit ullam magni!</p>
+            <p>Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the Brazil national team. .</p>
           </div>
         </div>
 
@@ -70,7 +75,7 @@
           </div>
           <div class="player-details">
             <h3>Lionel Messi</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti architecto commodi consectetur laboriosam hic? Eum maiores odit impedit ullam magni!</p>
+            <p>Lionel Andrés Messi is an Argentine professional footballer who plays as a forward or an attacking midfielder and captains the Argentina national team.</p>
           </div>
         </div>
 
@@ -80,7 +85,7 @@
           </div>
           <div class="player-details">
             <h3>Christiano ronaldo</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti architecto commodi consectetur laboriosam hic? Eum maiores odit impedit ullam magni!</p>
+            <p>Cristiano Ronaldo dos Santos Aveiro GOIH ComM is a Portuguese professional footballer who plays as a forward for Serie A club Juventus and captains the Portugal national team</p>
           </div>
         </div>
 
@@ -90,7 +95,7 @@
           </div>
           <div class="player-details">
             <h3>paulo dybala</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti architecto commodi consectetur laboriosam hic? Eum maiores odit impedit ullam magni!</p>
+            <p>Paulo Exequiel Dybala (born 15 November 1993) is an Argentine professional footballer who plays as a forward for Serie A club Juventus and the Argentina national team.</p>
           </div>
         </div>
 
@@ -100,7 +105,7 @@
           </div>
           <div class="player-details">
             <h3>mesut ozil</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti architecto commodi consectetur laboriosam hic? Eum maiores odit impedit ullam magni!</p>
+            <p>Mesut Özil is a German professional footballer who plays as an attacking midfielder for Süper Lig club Fenerbahçe. Nicknamed "The Assist King"</p>
           </div>
         </div>
 
@@ -110,7 +115,7 @@
           </div>
           <div class="player-details">
             <h3>mauro  icardi</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti architecto commodi consectetur laboriosam hic? Eum maiores odit impedit ullam magni!</p>
+            <p>Mauro Emanuel Icardi is an Argentine professional footballer who plays as a striker for Ligue 1 club Paris Saint-Germain and the Argentina national team</p>
           </div>
         </div>
 
@@ -120,7 +125,7 @@
           </div>
           <div class="player-details">
             <h3>Di maria</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti architecto commodi consectetur laboriosam hic? Eum maiores odit impedit ullam magni!</p>
+            <p>Ángel Fabián Di María is an Argentine professional footballer who plays for Ligue 1 club Paris Saint-Germain and the Argentina national team.</p>
           </div>
         </div>
 
@@ -130,7 +135,7 @@
           </div>
           <div class="player-details">
             <h3>kylian mbappe</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti architecto commodi consectetur laboriosam hic? Eum maiores odit impedit ullam magni!</p>
+            <p>Kylian Mbappé Lottin is a French professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the France national team..</p>
           </div>
         </div>
 
@@ -140,7 +145,7 @@
           </div>
           <div class="player-details">
             <h3>mohamed salah</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti architecto commodi consectetur laboriosam hic? Eum maiores odit impedit ullam magni!</p>
+            <p>Mohamed Salah Hamed Mahrous Ghaly is an Egyptian professional footballer who plays as a forward for Premier League club Liverpool and captains the Egypt national team .</p>
           </div>
         </div>
 
@@ -150,7 +155,7 @@
           </div>
           <div class="player-details">
             <h3>harry kane</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti architecto commodi consectetur laboriosam hic? Eum maiores odit impedit ullam magni!</p>
+            <p>Harry Edward Kane MBE is an English professional footballer who plays as a striker for Premier League club Tottenham Hotspur and captains the England national team. .</p>
           </div>
         </div>
 
@@ -160,7 +165,7 @@
           </div>
           <div class="player-details">
             <h3>phillippe coutinho</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti architecto commodi consectetur laboriosam hic? Eum maiores odit impedit ullam magni!</p>
+            <p>Philippe Coutinho Correia is a Brazilian professional footballer who plays as an attacking midfielder or winger for Spanish club Barcelona and the Brazil national team.</p>
           </div>
         </div>
 
@@ -170,7 +175,7 @@
           </div>
           <div class="player-details">
             <h3>kevin de bruine</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti architecto commodi consectetur laboriosam hic? Eum maiores odit impedit ullam magni!</p>
+            <p>Kevin De Bruyne is a Belgian professional footballer who plays as a midfielder for Premier League club Manchester City, where he is vice-captain, and the Belgium national team.</p>
           </div>
         </div>
       </div>
@@ -294,6 +299,10 @@
 
   </section>
 
+  <!-- end of news section -->
+
+  <!-- start of forum section -->
+
   <section class="join-forum-banner">
    
     <article class="form-container">
@@ -339,6 +348,9 @@
 
   </section>
 
+  <!-- end of forum section -->
+
+  <!-- start of footer section -->
 
   <section class="footer-section">
 
@@ -353,15 +365,18 @@
         <div class="icons-container">
           <div class="font-awesome">
             <p>
-            <i class="fab fa-instagram"></i>
-            <i class="far fa-futbol"></i>
-            <i class="fab fa-twitter"></i>
-            <i class="fab fa-youtube"></i>
+             <a href="https://www.instagram.com/aduvai11/" target="_blank"><i class="fab fa-instagram"></i> </a> 
+
+             <a href="https://www.liverpoolfc.com/" target="_blank"> <i class="far fa-futbol"></i></a> 
+
+             <a href="https://twitter.com/adu_vi11" target="_blank"> <i class="fab fa-twitter"></i></a> 
+
+             <a href="https://www.youtube.com/" target="_blank"> <i class="fab fa-youtube"></i></a> 
           </p>
           </div>
   
           <div class="copyright">
-            <p>Copyright © 2022 Football</p>
+            <p>Copyright <span>&copy;</span> 2022 Football</p>
           </div>
           
         </div>
@@ -372,6 +387,9 @@
 
   </section>
 
+  <!-- end of footer section -->
+
+  <!-- by this whole html build is completed -->
 
 </body>
 </html>
